--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="hero-content">
         <h1>Elevate Your Brand with Cutting-Edge Digital Marketing</h1>
         <p>At Techtify, we empower the most ambitious brands to grow with expert solutions in SEO, PPC, content writing, social media, and web design.</p>
-        <a href="#contact" class="cta-button">Start Your Journey</a>
+        <a href="#connect-with-us" class="cta-button">Start Your Journey</a>
     </div>
 </section>
 
@@ -129,6 +129,7 @@
 
 <!-- Footer Section -->
 <footer>
+     <section id="connect-with-us">
     <div class="footer-content container">
         <h3>Connect with Us</h3>
         <p>Stay connected with us for the latest insights and updates.</p>
@@ -147,6 +148,7 @@
     <div class="footer-bottom">
         <p>&copy; 2024 TECHTIFY. All rights reserved.</p>
     </div>
+         </section>
 </footer>
 
    
